Fix alignment issue with add image button and the image frame.

--- a/src/styles/addbook.scss
+++ b/src/styles/addbook.scss
@@ -157,7 +157,7 @@ $book_brown: rgba(77, 63, 63, 0.63);
                 justify-content: center;
             }
             .image__upload {
-                margin-left: -2%;
+                
                 margin-top: 3em;
                 height: 8%;
                 width: 80%;
